# Bitmind

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MVP_SPEC.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ruff-report.yml
bitmind/: __init__.py
bitmind/api/: __init__.py  audit.py  explorer.py  governance.py  main.py  network.py  poi.py  poi_appeals.py  validators.py
bitmind/blockchain/: block.py  chain.py  genesis.py  merkle.py  transaction.py  validation.py  wallet.py
bitmind/consensus/: consensus.py  proof_of_intelligence.py  scoring.py  slashing.py  validators.py
bitmind/core/: __init__.py  anti_cheat.py  audit.py  ledger.py  models.py  reputation.py  rewards.py  tasks.py  validators.py
bitmind/db/: __init__.py  database.py  models.py  repositories.py
bitmind/governance/: proposals.py  voting.py
bitmind/network/: discovery.py  node.py  peer.py
neurabit/: anticheat.py  reputation.py
neurabit/blockchain/: block.py  chain.py  consensus.py  (+2 more)
scripts/: check.sh
tests/: test_anti_cheat.py  test_appeal_resolution.py  test_audit.py  test_auto_slashing.py  test_batch_appeals.py  test_blockchain_core.py  test_explorer_api.py  test_explorer_pagination.py  test_governance.py  test_governance_periods.py  test_ledger.py  test_network_peer_api.py  test_p2p_network.py  test_poi_api.py  test_poi_awards.py  test_proof_of_intelligence.py  test_reputation.py  test_rewards.py  test_slashing.py  test_staking.py  test_tasks.py  test_users.py  test_validator_withdraw.py  test_validators.py
(+3 files in other folders)
