[project]
name = "bitmind"
version = "0.1.0"
description = "BitMind MVP - quality-first reward system prototype"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-ignore = ["E203"]

[tool.coverage.run]
branch = true
source = ["bitmind"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
